Apr 18, 2001
 - added OMNeT++ MSVC appwizard to the repository


